# NumericalMethods

./: .gitignore  CMakeLists.txt
cmake/: findQt.cmake
include/: numericalmatrix.h  numericalmethods.h
source/: numericalmatrix.cpp  numericalmethods.cpp  test.cpp
